--- a/chats.html
+++ b/chats.html
@@ -81,7 +81,7 @@
         </ul>
     </nav>
     <div id="no-mobile">
-        <span>Your screen is too big</span>
+        <span>Your screen is super big</span>
     </div>
     <script src="https://kit.fontawesome.com/4791395687.js" crossorigin="anonymous"></script>
 </body>
